plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.happiness'
version = '1.0.0'

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters (버전은 BOM이 관리)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // H2 인메모리 DB (개발용)
    runtimeOnly 'com.h2database:h2'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 이미지 리사이징
    implementation 'net.coobird:thumbnailator:0.4.20'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Rate limiting (in-memory Bucket4j)
    implementation 'com.bucket4j:bucket4j-core:8.10.1'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Commons Text (XSS sanitization)
    implementation 'org.apache.commons:commons-text:1.12.0'

    // Logstash encoder (JSON logs)
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
